# hierarchical-env

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  Tutorial.md  hie.yaml  hierarchical-env.cabal
.github/workflows/: haskell.yml
src/Control/Env/: Hierarchical.hs
src/Control/Env/Hierarchical/: Internal.hs  TH.hs
test/Control/Env/: HierarchicalSpec.hs
test/Control/Env/Hierarchical/: InternalSpec.hs  THSpec.hs
tutorial/: .gitignore  CHANGELOG.md  cabal.project  hie.yaml  hierarchical-env-tutorial.cabal
tutorial/docker/: docker-compose.yml
tutorial/docker/db/sql/: 001_create_inquery.sql  002_insert_status.sql
tutorial/src/: App.hs  Interface.hs
tutorial/src/Tutorial1/: App.hs  Env.hs  Interface.hs  Main.hs
tutorial/src/Tutorial2/: App.hs  Env.hs  Interface.hs  Main.hs
tutorial/src/Tutorial3/: App.hs  Env.hs  Interface.hs  Main.hs
tutorial/test/: AppSpec.hs  Spec.hs
tutorial/test/Tutorial1/: AppSpec.hs
tutorial/test/Tutorial2/: AppSpec.hs
tutorial/test/Tutorial3/: AppSpec.hs
